feat: 模块重构与功能增强（v2.0）
新增模块：backup/, catalog/, cdc/, lineage/, optimizer/, quality/, monitor/, session/, extension/
架构重构：异常处理、AOP切面、方言解析器、工具类基类
功能增强：批量插入、连接池监控、备份恢复、数据目录、血缘追踪、SQL优化、质量检查、CDC同步

69 files changed, 2495 insertions(+), 3100 deletions(-)